--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,9 @@
-title: unity-gameobject-spin
+title: Create a GameObject that spins
 hero_image: images/banner.png
-description: unity-gameobject-spin description
+description: Create a GameObject that spins
 version: 4
 listed: false
 copyedit: false
 last_tested: "2021-11-18"
 steps:
-  - title: Introduction
-  - title: Step title
-  - title: What next?
+  - title: Create a GameObject that spins
